Fix bug discovered with Findbugs
git-svn-id: https://subversion.biologie.ens.fr/svn/leburon/trunk/nividic@266 5a62d92b-e016-0410-9103-b89fe532bb34